--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zletools",
-  "version": "1.0.0",
+  "version": "1.0.0a",
   "description": "stuff i use",
   "main": "index.js",
   "scripts": {
