Added a couple of live-type checking helper functions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zletools",
-  "version": "1.0.0a",
+  "version": "1.0.0b",
   "description": "stuff i use",
   "main": "index.js",
   "scripts": {
