- Fixed "sortArrayBy" not doing its job in all known cases - Rewritten "reachValue" for a bit painless peeking into unknown object structures - Other minor changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zletools",
-  "version": "1.0.0d",
+  "version": "1.0.0e",
   "description": "stuff i use",
   "main": "index.js",
   "scripts": {
